--- a/web-app/public/index.html
+++ b/web-app/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="DQ-POC - Data Quality Knowledge Graph Builder" />
-    <title>DQ-POC - Knowledge Graph Builder</title>
+    <meta name="description" content="Data Quality - Knowledge Graph Builder" />
+    <title>Data Quality - Knowledge Graph Builder</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
